# win32-installers

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  default.build
modules/: Makefile.am  make_wxs.py  modules.build
modules/aspell-lib/: Makefile.am  aspell-lib.build  aspell-lib.wxs
modules/glade-2-dev/: Makefile.am  glade-2-dev.build  glade-2-dev.wxs
modules/glade-2-lib/: Makefile.am  glade-2-lib.build  glade-2-lib.wxs
modules/gtk+-2.0-dev/: Makefile.am  VERSIONS  gtk+-2.0-dev.build  gtk+-2.0-dev.wxs
modules/gtk+-2.0-dev/sources/lib/: fontconfig.def  gettextpo.def  gio-2.0.def  gobject-2.0.def  intl.def  libaspell.la  libatk-1.0.la  libcairo.la  libfreetype.la  libgdk-win32-2.0.la  libgdk_pixbuf-2.0.la  libgio-2.0.la  libglib-2.0.la  libgmodule-2.0.la  libgobject-2.0.la  libgthread-2.0.la  libgtk-win32-2.0.la  libpango-1.0.la  (+8 more)
modules/gtk+-2.0-lib/: Makefile.am  VERSIONS  glade-2-dev.build  gtk+-2.0-lib.wxs
modules/mono-cairo-dev/: Makefile.am  mono-cairo-dev.build  mono-cairo-dev.wxs
modules/mono-cairo-lib/: Makefile.am  mono-cairo-lib.build  mono-cairo-lib.wxs
modules/mono-posix-lib/: Makefile.am  mono-posix-lib.wxs
modules/poppler-lib/: Makefile.am  poppler-lib.build  poppler-lib.wxs
modules/vte-dev/: vte-dev.build  vte-dev.wxs
modules/vte-lib/: Makefile.am  vte-lib.build  vte-lib.wxs
modules/vte-sharp-dev/: Makefile.am  vte-sharp-dev.build  vte-sharp-dev.wxs
modules/vte-sharp-lib/: Makefile.am  vte-sharp-lib.build  vte-sharp-lib.wxs
runtime-en/: Makefile.am  Runtime.build  Runtime.wxs
sdk-en/: Makefile.am  SDK.build  SDK.wxs
(+136 files in other folders)
